[package]
name = "bunja"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["json", "blocking"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
hex = "0.4"
actix-web = "4.4"
actix-rt = "2.9"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
lazy_static = "1.4"
dashmap = "5.5"
mime_guess = "2.0"
bytes = "1.5"
futures = "0.3"
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
