[package]
name = "topline"
version = "0.1.0"
edition = "2021"

[dependencies]
zip = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
walkdir = "2.4"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
futures = "0.3"
bytes = "1.5"
chrono = "0.4"
config = "0.14"
dirs = "5.0"
postgrest = "1.4"
dotenv = "0.15"
rayon = "1.8"
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
flate2 = "1.0"
tar = "0.4"
num_cpus = "1.16"
rustc_version_runtime = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
